--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ img {
 a {
   text-decoration: none;
   outline: none;
-  color: #444; }
+  color: #000; }
 
 a:hover {
   color: #f78d15; }
@@ -157,7 +157,7 @@ body {
   .page-nav h2 {
     font-size: 36px;
     width: 100%;
-    color: #444; }
+    color: #000; }
     @media screen and (max-width: 600px) {
       .page-nav h2 {
         font-size: 26px; } }
@@ -169,9 +169,9 @@ body {
     .page-nav ul li i {
       width: 30px;
       text-align: center;
-      color: #444; }
+      color: #000; }
     .page-nav ul li a {
-      color: #444; }
+      color: #000; }
 
 .btn-success {
   background-color: #223d50;
@@ -285,6 +285,13 @@ header .headwe-nav {
 .scroll-to-fixed-fixed {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12); }
 
+
+  .LogoTagline {
+    color: #000;
+    font-size: 35px;
+}
+
+
 /* =================== Slider Style Starts Here =================== */
 .slider {
   position: relative; }
@@ -298,10 +305,6 @@ header .headwe-nav {
   .slider-captions {
     bottom: 100px !important; }
 
-  width: 90%;
-  text-align: center;
-  float: none;
-  margin: auto;
   .slider-captions .slider-title {
     font-size: 42px; } }
 @media screen and (max-width: 810px) {
@@ -699,6 +702,9 @@ header .headwe-nav {
   .hideForMobile {
     display: none;
   }
+  .LogoTagline {
+    font-size: 22px;
+}
 }
 
 
